[package]
name = "binio-wasm"
version = "0.1.0"
authors = ["kevingzhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_mods = {path = "../shared_mods"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0.0"