[package]
name = "wasi_binio_shared_mods"
version = "0.1.0"
authors = ["kevingzhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"
description = "wasi_binio_shared mods for wasi_binio_host and wasi_binio_wasm"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
