[package]
name = "hello-host"
version = "0.1.0"
authors = ["kevingzhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

[dependencies]
hello-shared = {path = "../hello-shared"}
wasmtime="0.15.0"
wasmtime-wasi="0.15.0"
wasi-common="0.15.0"
binio-host = { path ="../../binio-host"}
serde = { version = "1.0", features = ["derive"] }